Bug 163413 - Display Snap Guides not working
Summary: Display Snap Guides not working
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: medium minor
Assignee: Buovjaga
URL:
Whiteboard: target:25.2.0 target:24.8.3
Keywords: bibisected, bisected, regression
: 163712 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-10-13 13:42 UTC by Buovjaga
Modified: 2024-11-01 13:05 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2024-10-13 13:42:07 UTC
1. Open Impress or Draw
2. Toggle View - Snap Lines - Display Snap Guides
3. Check the state of the menu item

This started happening in 58a9c936bb065384d50e122ee2ac9037dd60cc32
Use less SdOptionsLayout->IsHelplines/SetHelplines in favor of officecfg

The reason is a copy & paste error, I will submit a patch.

officecfg::Office::Draw::Layout::Display::Guide::set should have Helpline in place of Guide.

Help about the topic: https://help.libreoffice.org/latest/en-US/text/simpress/01/04030000.html

"You can drag a snap line from the rulers and drop them on the page. To delete a snap line, drag it back to the ruler."
Comment 1 Commit Notification 2024-10-14 14:23:53 UTC
Ilmari Lauhakangas committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9790e2275384f6687aab9c5a7b4fc3b6ff5df981

tdf#163413 Fix copy & paste error in Display Snap Guides toggle code

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-10-14 18:00:33 UTC
Ilmari Lauhakangas committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/076855a4e97b9134a62e331347750bf4c6d41ffc

tdf#163413 Fix copy & paste error in Display Snap Guides toggle code

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Buovjaga 2024-11-01 13:05:40 UTC
*** Bug 163712 has been marked as a duplicate of this bug. ***