tdf#163413 Fix copy & paste error in Display Snap Guides toggle code

Change-Id: Icb2c549c3b510a33f3be519f5582374d6a096f35
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174870
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: Jenkins
(cherry picked from commit 9790e2275384f6687aab9c5a7b4fc3b6ff5df981)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174797
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>